--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Classement de Phrases Effrayantes</title>
+    <title>Classement par intensité d'Angoisse</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -76,12 +76,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>Classe les phrases de la plus effrayante à la moins terrifiante</h1>
+        <h1>Classe les phrases de la plus effrayante à la moins angoissante</h1>
         <ul id="phrases" class="sortable-list">
-            <li draggable="true">Un murmure inconnu derrière vous dans une pièce vide.</li>
-            <li draggable="true">Un cri lointain au milieu de la nuit.</li>
-            <li draggable="true">Une ombre bougeant seule dans le coin de votre vision.</li>
-            <li draggable="true">Un jouet qui s'allume sans être touché.</li>
+            <li draggable="true">Pourquoi suis-je là, si tout semble dépourvu de sens ?</li>
+            <li draggable="true">Qui suis-je vraiment, au-delà des rôles que je joue ? </li>
+            <li draggable="true">Comment accepter que tout, y compris moi, ait une fin ?</li>
+            <li draggable="true">Suis-je en train de vivre ma vie, ou celle que les autres attendent de moi ?</li>
+            <li draggable="true">Comment choisir, quand chaque décision ferme tant de portes ?</li>
+            <li draggable="true">Si je n’y arrive pas, que reste-t-il de ma valeur ?</li>
+            <li draggable="true">Est-il possible d’aimer ou d’être aimé pour ce que je suis vraiment ?</li>
+            <li draggable="true">À quoi bon continuer, si je ne sers à rien ?</li>
+            <li draggable="true"> Qui peut réellement me comprendre, quand personne ne vit ce que je ressens ?</li>
         </ul>
         <button id="generate-result">Générer les résultats</button>
         <textarea id="result" readonly placeholder="Votre message apparaîtra ici."></textarea>
