--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>Classe les phrases de la plus effrayante à la moins angoissante</h1>
+        <h1>Classe les questions par ordre d'angoisse</h1>
         <ul id="phrases" class="sortable-list">
             <li draggable="true">Pourquoi suis-je là, si tout semble dépourvu de sens ?</li>
-            <li draggable="true">Qui suis-je vraiment, au-delà des rôles que je joue ? </li>
+            <li draggable="true">Est-ce que j'existe, au-delà des rôles que je joue ? </li>
             <li draggable="true">Comment accepter que tout, y compris moi, ait une fin ?</li>
             <li draggable="true">Suis-je en train de vivre ma vie, ou celle que les autres attendent de moi ?</li>
-            <li draggable="true">Comment choisir, quand chaque décision ferme tant de portes ?</li>
-            <li draggable="true">Si je n’y arrive pas, que reste-t-il de ma valeur ?</li>
-            <li draggable="true">Est-il possible d’aimer ou d’être aimé pour ce que je suis vraiment ?</li>
-            <li draggable="true">À quoi bon continuer, si je ne sers à rien ?</li>
-            <li draggable="true"> Qui peut réellement me comprendre, quand personne ne vit ce que je ressens ?</li>
+            <li draggable="true">Comment choisir quand chaque décision ferme tant de portes ?</li>
+            <li draggable="true">Si je n’y arrive pas à faire ce qui compte, ai-je encore de la valeur ?</li>
+            <li draggable="true">Est-il possible d’être aimé pour ce que je suis vraiment ?</li>
+            <li draggable="true">À quoi bon continuer d'exister si je ne sers à rien ?</li>
+            <li draggable="true"> Qui peut réellement me comprendre quand personne ne vit ce que je ressens ?</li>
         </ul>
         <button id="generate-result">Générer les résultats</button>
         <textarea id="result" readonly placeholder="Votre message apparaîtra ici."></textarea>
