--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         .container {
             padding: 20px;
-            max-width: 600px;
+            max-width: 800px;
             margin: 0 auto;
         }
 
@@ -27,6 +27,7 @@
         .sortable-list {
             list-style: none;
             padding: 0;
+            margin: 10px 0;
         }
 
         .sortable-list li {
@@ -40,6 +41,16 @@
 
         .sortable-list li:active {
             cursor: grabbing;
+        }
+
+        .list-container {
+            display: flex;
+            justify-content: space-between;
+            gap: 20px;
+        }
+
+        .list-container div {
+            flex: 1;
         }
 
         button {
@@ -76,47 +87,55 @@
 </head>
 <body>
     <div class="container">
-        <h1>Classe les questions par ordre d'angoisse</h1>
-        <ul id="phrases" class="sortable-list">
-            <li draggable="true">Pourquoi suis-je là, si tout semble dépourvu de sens ?</li>
-            <li draggable="true">Est-ce que j'existe, au-delà des rôles que je joue ? </li>
-            <li draggable="true">Comment accepter que tout, y compris moi, ait une fin ?</li>
-            <li draggable="true">Suis-je en train de vivre ma vie, ou celle que les autres attendent de moi ?</li>
-            <li draggable="true">Comment choisir quand chaque décision ferme tant de portes ?</li>
-            <li draggable="true">Si je n’y arrive pas à faire ce qui compte, ai-je encore de la valeur ?</li>
-            <li draggable="true">Est-il possible d’être aimé pour ce que je suis vraiment ?</li>
-            <li draggable="true">À quoi bon continuer d'exister si je ne sers à rien ?</li>
-            <li draggable="true"> Qui peut réellement me comprendre quand personne ne vit ce que je ressens ?</li>
-        </ul>
+        <h1>Classe les questions par ordre d'angoisse ou d'indifférence</h1>
+        <div class="list-container">
+            <div>
+                <h2>Phrases angoissantes</h2>
+                <ul id="angst-phrases" class="sortable-list">
+                    <li draggable="true">Pourquoi suis-je là, si tout semble dépourvu de sens ?</li>
+                    <li draggable="true">Est-ce que j'existe, au-delà des rôles que je joue ?</li>
+                    <li draggable="true">Comment accepter que tout, y compris moi, ait une fin ?</li>
+                    <li draggable="true">Suis-je en train de vivre ma vie, ou celle que les autres attendent de moi ?</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Phrases indifférentes</h2>
+                <ul id="indifferent-phrases" class="sortable-list">
+                </ul>
+            </div>
+        </div>
         <button id="generate-result">Générer les résultats</button>
         <textarea id="result" readonly placeholder="Votre message apparaîtra ici."></textarea>
     </div>
     <script>
-        const phrasesList = document.getElementById("phrases");
+        const angstList = document.getElementById("angst-phrases");
+        const indifferentList = document.getElementById("indifferent-phrases");
         const generateButton = document.getElementById("generate-result");
         const resultBox = document.getElementById("result");
 
         let draggingItem;
 
-        // Ajouter les événements de glisser-déposer
-        phrasesList.addEventListener("dragstart", (e) => {
-            draggingItem = e.target;
-            setTimeout(() => e.target.classList.add("invisible"), 0);
-        });
+        // Ajouter les événements de glisser-déposer pour les deux listes
+        [angstList, indifferentList].forEach(list => {
+            list.addEventListener("dragstart", (e) => {
+                draggingItem = e.target;
+                setTimeout(() => e.target.classList.add("invisible"), 0);
+            });
 
-        phrasesList.addEventListener("dragend", (e) => {
-            draggingItem = null;
-            e.target.classList.remove("invisible");
-        });
+            list.addEventListener("dragend", (e) => {
+                draggingItem = null;
+                e.target.classList.remove("invisible");
+            });
 
-        phrasesList.addEventListener("dragover", (e) => {
-            e.preventDefault();
-            const currentItem = getDraggableAfter(phrasesList, e.clientY);
-            if (currentItem == null) {
-                phrasesList.appendChild(draggingItem);
-            } else {
-                phrasesList.insertBefore(draggingItem, currentItem);
-            }
+            list.addEventListener("dragover", (e) => {
+                e.preventDefault();
+                const currentItem = getDraggableAfter(list, e.clientY);
+                if (currentItem == null) {
+                    list.appendChild(draggingItem);
+                } else {
+                    list.insertBefore(draggingItem, currentItem);
+                }
+            });
         });
 
         function getDraggableAfter(container, y) {
@@ -134,13 +153,14 @@
 
         // Générer les résultats
         generateButton.addEventListener("click", () => {
-            const orderedPhrases = [...phrasesList.querySelectorAll("li")].map(
+            const angstPhrases = [...angstList.querySelectorAll("li")].map(
                 (item, index) => `${index + 1}. ${item.textContent}`
             ).join("\n");
-            resultBox.value = `Voici mon classement des phrases les plus effrayantes :\n${orderedPhrases}`;
-            resultBox.select();
-            document.execCommand("copy");
-            alert("Résultats copiés dans le presse-papiers !");
+            const indifferentPhrases = [...indifferentList.querySelectorAll("li")].map(
+                (item, index) => `${index + 1}. ${item.textContent}`
+            ).join("\n");
+
+            resultBox.value = `Phrases angoissantes :\n${angstPhrases}\n\nPhrases indifférentes :\n${indifferentPhrases}`;
         });
     </script>
 </body>
