--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 <body>
     <div class="container">
         <h1>Classe les questions par ordre d'angoisse</h1>
+        <p>Classez les phrases ci-dessous en fonction de leur intensité. Supprimez celles qui ne vous semblent pas pertinentes.</p>
         <ul id="phrases" class="sortable-list">
             <li draggable="true">Pourquoi suis-je là, si tout semble dépourvu de sens ? <button class="delete-btn">&times;</button></li>
             <li draggable="true">Est-ce que j'existe, au-delà des rôles que je joue ? <button class="delete-btn">&times;</button></li>
