--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <li draggable="true">Comment accepter que tout, y compris moi, ait une fin ? <button class="delete-btn">&times;</button></li>
             <li draggable="true">Suis-je en train de vivre ma vie, ou celle que les autres attendent de moi ? <button class="delete-btn">&times;</button></li>
             <li draggable="true">Comment choisir quand chaque décision ferme tant de portes ? <button class="delete-btn">&times;</button></li>
-            <li draggable="true">Si je n’y arrive pas à faire ce qui compte, ai-je encore de la valeur ? <button class="delete-btn">&times;</button></li>
+            <li draggable="true">Si je n’arrive pas à faire ce qui compte, ai-je encore de la valeur ? <button class="delete-btn">&times;</button></li>
             <li draggable="true">Est-il possible d’être aimé pour ce que je suis vraiment ? <button class="delete-btn">&times;</button></li>
             <li draggable="true">À quoi bon continuer d'exister si je ne sers à rien ? <button class="delete-btn">&times;</button></li>
             <li draggable="true">Qui peut réellement me comprendre quand personne ne vit ce que je ressens ? <button class="delete-btn">&times;</button></li>
